add sample source

--- a/neoCoreStaticLib/neoCoreStaticLib.vcxproj
+++ b/neoCoreStaticLib/neoCoreStaticLib.vcxproj
@@ -91,6 +91,7 @@
       <PreprocessorDefinitions>;_CRT_SECURE_NO_WARNINGS;__NOTUSEOPENSSL__1;_DEFNEODEF_;WIN32;_DEBUG;_LIB;;NEODEBUG;;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <AdditionalIncludeDirectories>./../include;_CRT_SECURE_NO_WARNINGS</AdditionalIncludeDirectories>
+      <TreatWChar_tAsBuiltInType>false</TreatWChar_tAsBuiltInType>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -175,9 +176,15 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\CSerialRS232.cpp" />
+    <ClCompile Include="..\src\EtcModule.cpp" />
+    <ClCompile Include="..\src\MemoryNode.cpp" />
     <ClCompile Include="..\src\NeoCoLib.cpp" />
     <ClCompile Include="..\src\neoDebug.cpp" />
+    <ClCompile Include="..\src\NeoSystemLib.cpp" />
     <ClCompile Include="..\src\rs232.cpp" />
+    <ClCompile Include="..\src\SystemUtil.cpp" />
+    <ClCompile Include="..\src\SystemUtil4windows.cpp" />
+    <ClCompile Include="..\src\TempPF.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
