update build toolchain

--- a/neo_c_lib/Makefile.arm
+++ b/neo_c_lib/Makefile.arm
@@ -1,5 +1,5 @@
-CC_SRC = arm-linux-gnueabi-gcc
-CXX_SRC = arm-linux-gnueabi-g++
-AR_SRC = arm-linux-gnueabi-ar
+CC_SRC = arm-linux-gnueabihf-gcc-4.9
+CXX_SRC = arm-linux-gnueabihf-g++-4.9
+AR_SRC = arm-linux-gnueabihf-gcc-ar-4.9
 PLATFORM = gnu-arm
 include Makefile.def
