--- a/neo_c_lib/Makefile.x86
+++ b/neo_c_lib/Makefile.x86
@@ -1,6 +1,6 @@
-CC_SRC	= gcc -m32
-CXX_SRC = g++ -m32
-AR_SRC = ar
+CC_SRC	= gcc-4.9 -m32
+CXX_SRC = g++-4.9 -m32
+AR_SRC = gcc-ar-4.9
 PLATFORM = gnu-x86
 
 include Makefile.def
